--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,5 +84,24 @@
             android:layout_height="wrap_content"
             android:text="Giriş" />
 
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <RadioButton
+                android:id="@+id/radioNFC"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="NFC" />
+
+            <RadioButton
+                android:id="@+id/radioKarekod"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Karekod" />
+        </RadioGroup>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
