--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -8,41 +8,34 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="159dp"
+        android:layout_height="72dp"
         android:layout_margin="60dp"
         android:orientation="horizontal"
         android:paddingTop="20dp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteY="6dp">
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="33dp"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
             android:layout_weight="1"
             android:text="En Son Giriş Yapılan Sınıf" />
 
         <TextView
+            android:id="@+id/textViewSonSinif"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="201dp"
-        android:layout_margin="60dp"
+        android:layout_height="197dp"
         android:orientation="vertical"
-        android:paddingTop="60dp"
+        android:paddingTop="70dp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="302dp">
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="match_parent"
-            android:layout_height="84dp"
-            android:text="İlk Giriş İşlemi Yapıldığı İçin Kullanıcı Bilgileri Sorulmayacaktır.Aynı Bilgilerle Kayıt İşleminiz Yapılacaktır."
-            android:textSize="18sp" />
+        tools:layout_editor_absoluteY="288dp">
 
         <Button
             android:id="@+id/buttonSinifaGirisYap"
